Fixing margin on Subscribe to Pages categories and button alignment

--- a/app/stylesheets/modules/_tour.sass
+++ b/app/stylesheets/modules/_tour.sass
@@ -569,9 +569,8 @@ img.page_img
 
 #subscribe_pages a h3
   color: $red
-  padding-top: 20px
-  padding-bottom: 10px
-  margin-bottom: 0px
+  margin-top: 20px
+  margin-bottom: 10px
   font-size: 18px
   font-weight: bold
   text-shadow: 1px 1px 0px #fff
